[package]
name = "wallet_tracker"
version = "0.3.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
calamine = "0.23"       # read Excel
rust_xlsxwriter = "0.7" # write Excel
